# tupledict

./: .bumpversion.cfg  .mise.toml  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
releasenotes/: config.yaml
releasenotes/notes/: python39-upgrade-e656c927b74dc043.yaml  typing-update-e440f2f4cf30457e.yaml
src/tupledict/: dictlist.py  tupledict.py
tests/: test_dictlist.py  test_tupledict.py  test_tuplelist.py
tupledict/: __init__.py  dictlist.py  tupledict.py
