[tool.poetry]
name = "tupledict"
version = "0.0.1"
description = "A dictionary indexed by tuples"
authors = ["Cam MacRae <cam.macrae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
