[tool.poetry]
name = "tupledict"
version = "0.0.2"
description = "A dictionary indexed by tuples"
authors = ["Cam MacRae <cam.macrae@gmail.com>"]
license = "Apache 2.0"
keywords = ["tupledict", "tuple", "dictionary"]
repository = "https://github.com/cammacrae/tupledict"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipdb = "*"
bumpversion = "*"
reno = "*"

[tool.bumpversion]
current_version = "0.0.2"
commit = true
tag = true

[tool.bumpversion.files]
"pyproject.toml" = {}



